# HandyMedMac

./: .gitignore  CLAUDE.md  EPHEMERAL_MODE_IMPLEMENTATION.md  EPHEMERAL_MODE_SUMMARY.md  RELEASE_GUIDE.md  TESTING_CHECKLIST.md  UPDATE_SERVER_SETUP.md  WINDOWS_BUILD.md  package.json  setup-platform.ps1  setup-platform.sh  update-server-example.js  verify_ephemeral.sh  vite.config.ts  year_measurement_normalization.patch
.cargo/: config.toml  config.toml.macos  config.toml.windows
.claude/: settings.local.json
.github/workflows/: build-test.yml  build.yml
docs/plans/: 2026-01-17-medical-vocabulary-expansion-design.md  2026-01-17-medical-vocabulary-expansion.md
libs/transcribe-rs/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
libs/transcribe-rs/src/: lib.rs
libs/transcribe-rs/src/engines/: whisper.rs
libs/transcribe-rs/src/engines/parakeet/: engine.rs  model.rs
scripts/: RELEASE_NOTES.md  build-release.sh  create-pkg.sh  install-from-github.sh  latest.json.template  remove-quarantine.sh
src/: App.tsx  bindings.ts
src-tauri/: Cargo.toml  Cargo.toml.backup  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: custom_words_benchmark.rs  medical_vocab_benchmark.rs  unit_tests.rs
src-tauri/resources/: DMG_README.txt  default_custom_vocab.txt
src-tauri/src/: actions.rs  clipboard.rs  lib.rs  medical_vocab.rs  overlay.rs  settings.rs  shortcut.rs  tray.rs  validation.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/audio/: recorder.rs  visualizer.rs
src-tauri/src/audio_toolkit/vad/: smoothed.rs
src-tauri/src/commands/: history.rs  medical.rs  mod.rs  models.rs
src-tauri/src/managers/: audio.rs  history.rs  model.rs  transcription.rs
src/components/: AccessibilityPermissions.tsx  EphemeralModeNotice.tsx  Sidebar.tsx
src/components/footer/: Footer.tsx
src/components/model-selector/: ModelDropdown.tsx
src/components/onboarding/: ModelCard.tsx
src/components/settings/: CustomWords.tsx  MedicalModeToggle.tsx  OpenCustomVocab.tsx  index.ts
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/debug/: DebugSettings.tsx
src/components/settings/general/: GeneralSettings.tsx
src/components/setup/: MedicalModeStep.tsx  PermissionsStep.tsx  SetupWizard.tsx  index.ts
src/components/ui/: SettingContainer.tsx  SettingsGroup.tsx
src/components/update-checker/: UpdateChecker.tsx
src/hooks/: useSettings.ts
src/i18n/locales/en/: translation.json
src/stores/: settingsStore.ts
